--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,7 +9,7 @@ homeassistant:
   # metric for Metric, imperial for Imperial
   unit_system: imperial
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-  time_zone: EST
+  time_zone: America/New_York
   # Customization file
   customize: !include customize.yaml
 
@@ -24,7 +24,7 @@ config:
 
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
-   base_url: home.andrew-myhre.com:8123
+#        base_url: http://home.andrew-myhre.com:8123
 
 # Checks for available updates
 # Note: This component will send some information about your system to
@@ -57,6 +57,28 @@ sun:
 sensor:
   # Weather prediction
   - platform: yr
+  - platform: darksky
+    api_key: 67ddd9c4685908120132aaa3253821f7
+    forecast:
+      - 0
+    monitored_conditions:
+      - summary
+      - icon
+      - temperature
+      - precip_intensity
+      - precip_probability
+      - precip_type
+      - precip_accumulation
+      - temperature
+      - apparent_temperature
+      - wind_speed
+      - wind_gust
+      - minutely_summary
+      - hourly_summary
+      - daily_summary
+      - sunrise_time
+      - sunset_time
+      - cloud_cover
 
 # Text to speech
 tts:
@@ -78,6 +100,32 @@ cloud:
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
+
+device_tracker:
+  - platform: quantum_gateway
+    host: 192.168.1.1
+    password: door316wax
+    new_device_defaults:
+      track_new_devices: true
+      hide_if_away: false
+    interval_seconds: 10
+    consider_home: 60
+  - platform: bluetooth_le_tracker
+    interval_seconds: 10
+    consider_home: 60
+  - platform: bluetooth_tracker
+    interval_seconds: 10
+    consider_home: 60
+  - platform: nmap_tracker
+    hosts: 192.168.1.0/24
+
+notify:
+  - name: slack
+    platform: slack
+    api_key: xoxb-532924045973-532561432644-8h8TQbtAAXjGrDDPmmaDyyZC
+    default_channel: '#andrew-is-awesome'
+    username: "@homeassistant"
+    icon: ":house:"
 
 light:
   - platform: limitlessled
@@ -104,16 +152,20 @@ media_player:
     host: 192.168.1.5
     port: 8001
     name: tv_ha
-switch:
+switch livingroom:
   - platform: tplink
-    host: 192.168.1.203
+    host: 192.168.1.217
     name: "Living Room"
 scene:
   - name: Movie
     entities: 
       light.hallway:
         state: true
-        rgb_color: 255,255,72
+        color_name: "warm white"
+        brightness: 26
+      light.doorway:
+        state: true
+        color_name: "warm white"
         brightness: 26
       switch.living_room:
         state: false
@@ -121,8 +173,38 @@ scene:
     entities:
       light.hallway:
         state: true
-        rgb_color: 255,255,72
+        color_name: "warm white"
         brightness: 150
       switch.living_room:
         state: true
+      light.doorway:
+        state: true
+        color_name: "warm white"
+        brightness: 150
+      light.kitchen:
+        state: true
+        color_name: "warm white"
+        brightness: 190
+  - name: AllLightsOff
+    entities:
+      light.hallway:
+        state: false
+        color_name: "warm white"
+        brightness: 0
+      switch.living_room:
+        state: false
+      light.doorway:
+        state: false
+        color_name: "warm white"
+        brightness: 0
+      light.kitchen:
+        state: false
+        color_name: "warm white"
+        brightness: 0
+
+vacuum:
+  - platform: roomba
+    host: 192.168.1.181
+    username: 3175000031817670
+    password: ":1:1546059757:xzGkmlb33j6Y5frG"
 
