--- a/automations.yaml
+++ b/automations.yaml
@@ -1,150 +1,149 @@
-- alias: "Andrew is home"
+- alias: Andrew is home
   trigger:
-    - platform: state
-      entity_id: group.tracker_andrew
-      from: 'not_home'
-      to: 'home'
+  - platform: state
+    entity_id: group.tracker_andrew
+    from: not_home
+    to: home
   condition:
-    - condition: state
-      entity_id: sun.sun
-      state: 'below_horizon'
+  - condition: state
+    entity_id: sun.sun
+    state: below_horizon
   action:
-    - service: notify.slack
-      data:
-        message: "Andrew is home"
-    - service: homeassistant.turn_on
-      entity_id: scene.evening
-    - service: ifttt.trigger
-      data: {"event": "light_living_room_warm_white"}
-
-- alias: "Send roomba home when Andrew comes home"
+  - service: notify.slack
+    data:
+      message: Andrew is home
+  - service: homeassistant.turn_on
+    entity_id: scene.evening
+  id: a79d7a7d8d3d4494ba806e4bdf4a63e7
+- alias: Send roomba home when Andrew comes home
   trigger:
-    - platform: state
-      entity_id: group.tracker_andrew
-      from: 'not_home'
-      to: 'home'
+  - platform: state
+    entity_id: group.tracker_andrew
+    from: not_home
+    to: home
   condition:
-    - condition: state
-      entity_id: vacuum.roomba
-      state: 'on'
+  - condition: state
+    entity_id: vacuum.roomba
+    state: 'on'
   action:
-    - service: vacuum.return_to_base
-      entity_id: vacuum.roomba
-
-- alias: "Turn on lights when the sun sets and I am home"
+  - service: vacuum.return_to_base
+    entity_id: vacuum.roomba
+  id: ed717fd547ca40dd98b8c5ccb7fe3544
+- alias: Turn on lights when the sun sets and I am home
   trigger:
-    - platform: sun
-      event: sunset
-      offset: "-00:45:00"
+  - platform: sun
+    event: sunset
+    offset: -00:45:00
   condition:
-    - condition: state
-      entity_id: group.tracker_andrew
-      state: home
+  - condition: state
+    entity_id: group.tracker_andrew
+    state: home
   action:
-    - service: homeassistant.turn_on
-      entity_id: scene.evening
-    - service: ifttt.trigger
-      data: {"event": "light_living_room_warm_white"}
-    - service: notify.slack
-      data:
-        message: "The sun is setting soon and you're home so I turned the lights on"
-
-- alias: "Turn off the lights when I leave home"
+  - service: homeassistant.turn_on
+    entity_id: scene.evening
+  - service: notify.slack
+    data:
+      message: The sun is setting soon and you're home so I turned the lights on
+  id: eb5645437abf48c886421a0fdb48fdc1
+- alias: Turn off the lights when I leave home
   trigger:
-    - platform: state
-      entity_id: group.tracker_andrew
-      from: 'home'
-      to: 'not_home'
+  - platform: state
+    entity_id: group.tracker_andrew
+    from: home
+    to: not_home
   action:
-    - service: homeassistant.turn_off
-      entity_id: group.all_lights
-    - service: homeassistant.turn_off
-      entity_id: switch.living_room
-    - service: ifttt.trigger
-      data: {"event": "light_living_room_off"}
-    - service: notify.slack
-      data:
-        message: "You left home so I turned the lights off"
-
-- alias: "Turn on the kitchen light in the morning"
+  - service: homeassistant.turn_off
+    entity_id: group.all_lights
+  - service: homeassistant.turn_off
+    entity_id: switch.living_room
+  - service: ifttt.trigger
+    data:
+      event: light_living_room_off
+  - service: notify.slack
+    data:
+      message: You left home so I turned the lights off
+  id: 2155018ca7674665b1cce7b4b2c20b8d
+- alias: Turn on the kitchen light in the morning
   trigger:
     platform: sun
     event: sunrise
   condition:
     condition: or
     conditions:
-      - condition: state
-        entity_id: group.tracker_andrew
-        state: home
-  action:
-    - service: homeassistant.turn_on
-      data:       
-        entity_id:
-        - light.Kitchen
-        brightness: 190
-        color_name: "warm white"
-    - service: notify.slack
-      data: 
-        message: "Good morning, I turned the lights on in the kitchen"
-
-- alias: 'Rainy Day'
-  trigger:
-    - platform: state
-      entity_id: sensor.precip_intensity
-      to: 'rain'
-  condition:
-    - condition: or
-      conditions:
-        - condition: state
-          entity_id: group.tracker_andrew
-          state: home
-    - condition: time
-      after: '14:00'
-      before: '23:00'
-  action:
-    - service: homeassistant.turn_on
-      entity_id: scene.evening
-    - service: notify.slack
-      data: 
-        message: "It's raining so I turned the lights on"
-
-- alias: "Dark Morning"
-  trigger:
-    - platform: numeric_state
-      entity_id: sensor.dark_sky_cloud_coverage_0
-      above: 70
-  condition:
-    - condition: or
-      conditions:
-        - condition: state
-          entity_id: group.tracker_andrew
-          state: home
-    - condition: state
-      entity_id: sun.sun
-      state: 'above_horizon'
-  action:
-    - service: homeassistant.turn_on
-      entity_id: scene.evening
-    - service: notify.slack
-      data: 
-        message: "It's dark so I turned the lights on"
-
-- alias: "Begin vacuuming"
-  trigger:
-    - platform: time
-      at: '11:00:00'
-  condition:
     - condition: state
       entity_id: group.tracker_andrew
-      state: not_home
+      state: home
   action:
-    - service: vacuum.turn_on
-      entity_id: vacuum.roomba
-    - service: notify.slack
-      data:
-        message: "I started the Roomba on a cleaning cycle"
-
-- alias: "TV On - Received IFTTT Webhook"
+  - service: homeassistant.turn_on
+    data:
+      entity_id:
+      - light.Kitchen
+      brightness: 192
+      color_temp: 370
+      min_mireds: 154
+      max_mireds: 370
+  - service: notify.slack
+    data:
+      message: Good morning, I turned the lights on in the kitchen
+  id: 09eba6d35c8f477c97f2c6659c9078b6
+- alias: Rainy Day
+  trigger:
+  - platform: state
+    entity_id: sensor.precip_intensity
+    to: rain
+  condition:
+  - condition: or
+    conditions:
+    - condition: state
+      entity_id: group.tracker_andrew
+      state: home
+  - condition: time
+    after: '14:00'
+    before: '23:00'
+  action:
+  - service: homeassistant.turn_on
+    entity_id: scene.evening
+  - service: notify.slack
+    data:
+      message: It's raining so I turned the lights on
+  id: 89d2a9c66dea4507bcc46577a06f84a6
+- alias: Dark Morning
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.dark_sky_cloud_coverage_0
+    above: 70
+  condition:
+  - condition: or
+    conditions:
+    - condition: state
+      entity_id: group.tracker_andrew
+      state: home
+  - condition: state
+    entity_id: sun.sun
+    state: above_horizon
+  action:
+  - service: homeassistant.turn_on
+    entity_id: scene.evening
+  - service: notify.slack
+    data:
+      message: It's dark so I turned the lights on
+  id: 169872498dae436589551c9a165da5b4
+- alias: Begin vacuuming
+  trigger:
+  - platform: time
+    at: '11:00:00'
+  condition:
+  - condition: state
+    entity_id: group.tracker_andrew
+    state: not_home
+  action:
+  - service: vacuum.turn_on
+    entity_id: vacuum.roomba
+  - service: notify.slack
+    data:
+      message: I started the Roomba on a cleaning cycle
+  id: 3347c518a2cf4147a9c728c11ad2852f
+- alias: TV On - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -154,9 +153,9 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "Home"
-
-- alias: "Open Youtube - Received IFTTT Webhook"
+      source: Home
+  id: eea9f741e0b94369b04e243f50616375
+- alias: Open Youtube - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -166,9 +165,9 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "YouTube"
-
-- alias: "Open HBO Now - Received IFTTT Webhook"
+      source: YouTube
+  id: 894327b1bb764cffb3a2f8849cfb1647
+- alias: Open HBO Now - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -178,9 +177,9 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "HBO NOW"
-
-- alias: "Open Netflix - Received IFTTT Webhook"
+      source: HBO NOW
+  id: d9af42d31d6149de80d3bf104860dfa2
+- alias: Open Netflix - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -190,9 +189,9 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "Netflix"
-
-- alias: "Open Hulu - Received IFTTT Webhook"
+      source: Netflix
+  id: c521d7eef16946fcbc1ecfcf9d1acd59
+- alias: Open Hulu - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -202,9 +201,9 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "Hulu"
-
-- alias: "Open Prime Video - Received IFTTT Webhook"
+      source: Hulu
+  id: 88d18e69051c41e186f45996a9588c84
+- alias: Open Prime Video - Received IFTTT Webhook
   trigger:
     platform: event
     event_type: ifttt_webhook_received
@@ -214,18 +213,108 @@
     service_template: '{{ trigger.event.data.service }}'
     data_template:
       entity_id: '{{ trigger.event.data.entity_id }}'
-      source: "Prime Video"
-
-- alias: "Select theme"
+      source: Prime Video
+  id: a9a05a2ab9d847fb9f66285e703d769d
+- alias: Select theme
   id: hass_theme
   initial_state: 'on'
   trigger:
-    - platform: state
-      entity_id: input_select.hass_theme
+  - platform: state
+    entity_id: input_select.hass_theme
   action:
-    - service: frontend.set_theme
-      data_template:
-        name: "{{ states.input_select.hass_theme.state }}"
+  - service: frontend.set_theme
+    data_template:
+      name: '{{ states.input_select.hass_theme.state }}'
+- alias: Turn off the lights when I go to sleep
+  condition:
+    condition: or
+    conditions:
+    - condition: state
+      entity_id: group.tracker_andrew
+      state: home
+  trigger:
+  - platform: event
+    event_type: ifttt_webhook_received
+    event_data:
+      action: goodnight
+  action:
+  - service: homeassistant.turn_off
+    entity_id: group.all_lights
+  - service: homeassistant.turn_off
+    entity_id: switch.living_room
+  - service: ifttt.trigger
+    data:
+      event: light_living_room_off
+  id: 1f8c980eff8d44fbad564d5ccee0307d
 
-
+- alias: "Light show"
+  id: light_show
+  trigger:
+  - platform: state
+    entity_id: group.tracker_andrew
+    from: not_home
+    to: home
+  condition:
+    condition: or
+    conditions:
+    - condition: state
+      entity_id: group.tracker_andrew
+      state: home
+  action:
+  - service: light.turn_on
+    entity_id: light.bedroom_lamp
+  - service: light.turn_on
+    data_template:
+      entity_id: light.doorway
+      color_name: red
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.hallway
+      color_name: green
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.kitchen
+      color_name: maroon
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.doorway
+      color_name: blue
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.hallway
+      color_name: magenta
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.kitchen
+      color_name: green
+      brightness: 255
+      transition: 3
+  - service: light.turn_on
+    data_template:
+      entity_id: light.doorway
+      color_name: warm_white
+      brightness: 100
+      transition: 5
+  - service: light.turn_on
+    data_template:
+      entity_id: light.hallway
+      color_name: warm_white
+      brightness: 100
+      transition: 5
+  - service: light.turn_on
+    data_template:
+      entity_id: light.kitchen
+      color_name: warm_white
+      brightness: 150
+      transition: 5
 
