--- a/groups.yaml
+++ b/groups.yaml
@@ -3,6 +3,6 @@ tracker_andrew:
   view: yes
   entities:
     - device_tracker.andrews_phone_wifi
-    - device_tracker.andrews_phone_bt
+          #    - device_tracker.andrews_phone_bt
     - device_tracker.fa7ag1a02205
 #    - device_tracker.andrew_pixel
