--- a/automations.yaml
+++ b/automations.yaml
@@ -263,58 +263,102 @@
   action:
   - service: light.turn_on
     entity_id: light.bedroom_lamp
+# initial
   - service: light.turn_on
     data_template:
       entity_id: light.doorway
-      color_name: red
-      brightness: 255
-      transition: 3
+      brightness: 1
+      rgb_color: [255,0,255]
   - service: light.turn_on
     data_template:
       entity_id: light.hallway
-      color_name: green
-      brightness: 255
-      transition: 3
+      brightness: 1
+      rgb_color: [255,0,255]
   - service: light.turn_on
     data_template:
       entity_id: light.kitchen
-      color_name: maroon
-      brightness: 255
-      transition: 3
+      brightness: 1
+      rgb_color: [255,0,255]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_1
+      brightness: 1
+      rgb_color: [255,0,0]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_2
+      brightness: 1
+      rgb_color: [0,255,0]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_3
+      brightness: 1
+      rgb_color: [0,0,255]
+# first transition
   - service: light.turn_on
     data_template:
       entity_id: light.doorway
-      color_name: blue
       brightness: 255
-      transition: 3
+      transition: 5
+      rgb_color: [255,0,255]
   - service: light.turn_on
     data_template:
       entity_id: light.hallway
-      color_name: magenta
       brightness: 255
-      transition: 3
+      transition: 5
+      rgb_color: [255,0,255]
   - service: light.turn_on
     data_template:
       entity_id: light.kitchen
-      color_name: green
       brightness: 255
-      transition: 3
+      transition: 5
+      rgb_color: [255,0,255]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_1
+      brightness: 255
+      transition: 15
+      rgb_color: [0,255,0]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_2
+      brightness: 255
+      transition: 15
+      rgb_color: [0,0,255]
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_3
+      brightness: 255
+      transition: 15
+      rgb_color: [255,0,0]
+# second transition
   - service: light.turn_on
     data_template:
       entity_id: light.doorway
-      color_name: warm_white
-      brightness: 100
-      transition: 5
+      brightness: 89
+      color_temp: 1000
   - service: light.turn_on
     data_template:
       entity_id: light.hallway
-      color_name: warm_white
-      brightness: 100
-      transition: 5
+      brightness: 89
+      color_temp: 1000
   - service: light.turn_on
     data_template:
       entity_id: light.kitchen
-      color_name: warm_white
-      brightness: 150
-      transition: 5
-
+      brightness: 89
+      color_temp: 1000
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_1
+      brightness: 89
+      color_temp: 1000
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_2
+      brightness: 89
+      color_temp: 1000
+  - service: light.turn_on
+    data_template:
+      entity_id: light.living_room_bulb_3
+      brightness: 89
+      color_temp: 1000
