--- a/configuration.yaml
+++ b/configuration.yaml
@@ -413,7 +413,7 @@ vacuum:
   - platform: roomba
     host: 192.168.1.9
     username: 3175000031817670
-    password: ":1:1546059757:xzGkmlb33j6Y5frG"
+    password: ":1:1575845387:taEElBRsoG0VTOHW"
 
 weather:
   - platform: darksky
