--- a/configuration.yaml
+++ b/configuration.yaml
@@ -143,7 +143,7 @@ light:
           fade: true
   - platform: group
     entities:
-      - light.bedroom_lamp
+      - light.bedroom_light_1
     name: Bedroom
   - platform: group
     name: Kitchen
