--- a/automations.yaml
+++ b/automations.yaml
@@ -366,19 +366,12 @@
       entity_id: group.tracker_andrew
       state: home
   action:
+  ## 1
   - service: light.turn_on
-    entity_id: light.bedroom_lamp
-  - service: light.turn_on
-    data_template:
-      entity_id: light.doorway
-      brightness: 1
-      rgb_color:
-      - 255
-      - 0
-      - 255
+    entity_id: light.bedroom
   - service: light.turn_on
     data_template:
-      entity_id: light.hallway
+      entity_id: light.bedroom
       brightness: 1
       rgb_color:
       - 255
@@ -394,46 +387,13 @@
       - 255
   - service: light.turn_on
     data_template:
-      entity_id: light.living_room_bulb_1
+      entity_id: light.lounge
       brightness: 1
       rgb_color:
       - 255
       - 0
       - 0
-  - service: light.turn_on
-    data_template:
-      entity_id: light.living_room_bulb_2
-      brightness: 1
-      rgb_color:
-      - 0
-      - 255
-      - 0
-  - service: light.turn_on
-    data_template:
-      entity_id: light.living_room_bulb_3
-      brightness: 1
-      rgb_color:
-      - 0
-      - 0
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.doorway
-      brightness: 255
-      transition: 5
-      rgb_color:
-      - 255
-      - 0
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.hallway
-      brightness: 255
-      transition: 5
-      rgb_color:
-      - 255
-      - 0
-      - 255
+  ## 2
   - service: light.turn_on
     data_template:
       entity_id: light.kitchen
@@ -445,7 +405,7 @@
       - 255
   - service: light.turn_on
     data_template:
-      entity_id: light.living_room_bulb_1
+      entity_id: light.bedroom
       brightness: 255
       transition: 15
       rgb_color:
@@ -454,49 +414,26 @@
       - 0
   - service: light.turn_on
     data_template:
-      entity_id: light.living_room_bulb_2
+      entity_id: light.lounge
       brightness: 255
       transition: 15
       rgb_color:
       - 0
       - 0
       - 255
+  ## 3
   - service: light.turn_on
     data_template:
-      entity_id: light.living_room_bulb_3
-      brightness: 255
-      transition: 15
-      rgb_color:
-      - 255
-      - 0
-      - 0
-  - service: light.turn_on
-    data_template:
-      entity_id: light.doorway
+      entity_id: light.bedroom
       brightness: 89
-      color_temp: 1000
-  - service: light.turn_on
-    data_template:
-      entity_id: light.hallway
-      brightness: 89
-      color_temp: 1000
+      color_name: "Warm White"
   - service: light.turn_on
     data_template:
       entity_id: light.kitchen
       brightness: 89
-      color_temp: 1000
+      color_name: "Warm White"
   - service: light.turn_on
     data_template:
-      entity_id: light.living_room_bulb_1
+      entity_id: light.lounge
       brightness: 89
-      color_temp: 1000
-  - service: light.turn_on
-    data_template:
-      entity_id: light.living_room_bulb_2
-      brightness: 89
-      color_temp: 1000
-  - service: light.turn_on
-    data_template:
-      entity_id: light.living_room_bulb_3
-      brightness: 89
-      color_temp: 1000
+      color_name: "Warm White"
