--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,6 +25,8 @@ frontend:
 # Enables configuration UI
 config:
 
+wake_on_lan:
+
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
 #        base_url: http://home.andrew-myhre.com:8123
