--- a/automations.yaml
+++ b/automations.yaml
@@ -14,6 +14,8 @@
       message: Andrew is home
   - service: homeassistant.turn_on
     entity_id: scene.evening
+  - service: cover.close_cover
+    entity_id: cover.blinds
   id: a79d7a7d8d3d4494ba806e4bdf4a63e7
 - alias: Send roomba home when Andrew comes home
   trigger:
